@@ -694,3 +694,6 @@
 
 - Sat Oct 1 2016 (Christian.Kühnel)
   - added new module 99_Venetian
+
+- Fri Oct 7 2016 (jmike)
+  - adding new module 98_TRAFFIC
